--- a/client/src/css_styles/index.css
+++ b/client/src/css_styles/index.css
@@ -12,3 +12,15 @@ body {
 html {
     font-family: 'Press Start 2P', sans-serif;
 }
+
+.App {
+    width: 100%;
+    min-height: 100vh;
+}
+
+/* Start Main Classes */
+
+
+/* End Main Classes */
+
+
