fix delete feature

--- a/client/src/css_styles/index.css
+++ b/client/src/css_styles/index.css
@@ -16,7 +16,8 @@ html {
 .App {
     width: 100%;
     min-height: 100vh;
-    background-image: url('../assests/icon_img.avif');
+    background-image: url('../assests/simple.jpg');
+    background-repeat: repeat;
 
 }
 
